# dxs

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/dxs/: main.py
src/dxs/templates/: README.md
src/qa/: main.py
src/qa/templates/: README.md
