[project]
name = "qa"
version = "0.1.0"
license = { text = "apache-2.0" }
description = "Cli tool to create a project structure."
authors = [{ name = "Daxexs", email = "Daxexsdev@gmail.com" }]
dependencies = ["flet", "typer[all]", "toml", "setuptools", "wheel", "twine"]

requires-python = ">=3.8"
readme = "README.md"

keywords = ["qa", "cli", "uv cli"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Daxexs"
Repository = "https://github.com/Daxexs/vu"
Documentation = "https://github.com/Daxexs/vu/blob/main/README.md"
Changelog = "https://github.com/Daxexs/vu/blob/main/README.md"


[project.scripts]
qa = "qa.main:app"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pkg*"]
namespaces = false
